[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Weapon.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 18.0
height = 98.0

[sub_resource type="Animation" id=2]
resource_name = "Angle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 0.15932, 0.138696 ),
"update": 0,
"values": [ -50.0, 75.0 ]
}

[node name="Weapon" type="Area2D"]
rotation = -0.872665
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="CollisionShape2D"]
modulate = Color( 0, 1, 0.976471, 1 )
scale = Vector2( 0.5, 2 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
autostart = true

[node name="WeaponSwing" type="AnimationPlayer" parent="."]
anims/Angle = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Weapon_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
